--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "journeys",
+  "name": "@utkusarioglu/journeys",
   "version": "0.0.1",
   "description": "A tool for creating accurate representations of objects throughout systems and components",
   "main": "index.js",
   "repository": "https://github.com/utkusarioglu/journeys.git",
   "author": "Utku Sarioglu <utkusarioglu@hotmail.com>",
   "license": "MIT",
-  "private": false,
   "devDependencies": {
     "@types/node": "^16.7.5",
     "typescript": "^4.4.2"
