--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "@utkusarioglu/journeys",
   "version": "0.0.3",
   "description": "A tool for creating accurate representations of objects throughout systems and components",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/utkusarioglu/journeys.git",
   "author": "Utku Sarioglu <utkusarioglu@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.7.5",
     "typescript": "^4.4.2"
-  }
+  },
+  "files": [
+    "/dist"
+  ]
 }
